force-app/main/default/objects/Blue_Bus__c/Blue_Bus__c.object-meta.xml
<CustomObject>
    <label>Blue Bus</label>
    <nameField>
        <label>Bus Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blue Buses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>