force-app/main/default/objects/Blue_Bus__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <formula>IF(  AND(ISPICKVAL( From_City__c , &apos;Chennai&apos;), ISPICKVAL( To_City__c , &apos;Madurai&apos;))  , 1000, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>