force-app/main/default/objects/Blue_Bus__c/fields/From_City__c.field-meta.xml
<CustomField>
    <fullName>From_City__c</fullName>
    <label>From_City</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Madurai</fullName>
            </value>
            <value>
                <fullName>Trichy</fullName>
            </value>
            <value>
                <fullName>Coimbatore</fullName>
            </value>
            <value>
                <fullName>Sivagangai</fullName>
            </value>
            <value>
                <fullName>Kanchipuram</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>